--- a/src/css/index.css
+++ b/src/css/index.css
@@ -150,7 +150,7 @@ fieldset button {
 }
 
 .aujourdhui {
-    background-color: rgb(125, 253, 90);   
+    background-color: rgb(30, 255, 0);   
     z-index: 100000; 
 
 }
@@ -185,7 +185,7 @@ fieldset button {
     vertical-align: middle;
     line-height: 20px;
     font-size: 0.9em;
-    color: rgb(0, 153, 102);
+    color: rgb(255, 0, 0);
     overflow: hidden;
     font-weight: bold;
 }
@@ -299,3 +299,66 @@ fieldset button {
       transform: rotate(360deg);
     }
   }  
+
+
+
+
+/* ---------------------------- */
+
+.btn-group {
+    display: inline-block;
+    border: 0px solid rgb(27, 149, 182);
+    /* border-radius: 10px; */
+    overflow: hidden;
+    margin-right: 10px;
+    margin-left: 7px;
+    margin-top: 7px;
+    /* height: 45px; */
+    margin-bottom: 7px;
+}
+
+.btn-group legend {
+    background-color: #d2d2d2;
+    border: 1px solid green; 
+    color: rgb(119, 119, 119); 
+    padding: 8px 14px; 
+    cursor: pointer; 
+    float: left;
+    /* height: 15px; */
+    display: inline;
+  }
+  
+  .btn-group > button {
+    background-color: #48bfee; 
+    border: 1px solid rgb(0, 53, 128); 
+    color: rgb(0, 0, 0); 
+    padding: 8px 10px; 
+    cursor: pointer; 
+    /* float: left; */
+    height: 36px;
+    font-size: 17px;
+  }
+
+.btn-group > span {
+    background-color: #48bfee; 
+    border: 1px solid rgb(0, 53, 128); 
+    color: white; 
+    padding: 8px 24px; 
+    cursor: pointer; 
+    /* float: left; */
+    /* height: 15px; */
+  }
+  
+  .btn-group > span > div {
+    color: black; /* White text */
+  }
+  
+  
+  /* Add a background color on hover */
+  .btn-group span:hover {
+    background-color: #229dd2;
+  }
+
+  .btn-group button:not(:last-child) {
+    border-right: none; /* Prevent double borders */
+  }
